# alloy-dynamic-multicall

./: Cargo.toml  README.md
src/: lib.rs
